# ONNX-YOLOv10-Object-Detection

./: README.md  image_object_detection.py  pyproject.toml  video_object_detection.py  webcam_object_detection.py
yolov10/: __init__.py  utils.py  yolov10.py
