[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov10-onnx"
version = "0.2.0"
description = "Run YOLOv10 model with ONNX Runtime"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ibai Gorordo"}
]
dependencies = [
    "opencv-python",
    {version = "onnxruntime==1.18.0", markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"},
    {version = "onnxruntime-silicon==1.16.3", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    {version = "onnxruntime-gpu==1.18.0", markers = "sys_platform != 'darwin'"}
]

[tool.setuptools.packages.find]
include = ["yolov10"]

[project.urls]
Homepage = "https://github.com/ibaiGorordo/ONNX-YOLOv10-Object-Detection"
