[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov10-onnx"
version = "0.3.0"
description = "Run YOLOv10 model with ONNX Runtime"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ibai Gorordo"}
]
dependencies = [
    "opencv-python",
    "onnxruntime==1.18.0; sys_platform == 'darwin' and platform_machine != 'arm64'",
    "onnxruntime-silicon==1.16.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "onnxruntime-gpu==1.18.0; sys_platform != 'darwin'"
]

[tool.setuptools.packages.find]
include = ["yolov10"]

[project.urls]
Homepage = "https://github.com/ibaiGorordo/ONNX-YOLOv10-Object-Detection"
